hphp/hack/test/typecheck/modules/module_enums.php.exp
File "module_enums.php--X.php", line 15, characters 13-13:
You cannot use this type in a public declaration. (Typing[4446])
  File "module_enums.php--X.php", line 6, characters 6-6:
  It is declared as `internal` here
File "module_enums.php--Y.php", line 5, characters 13-13:
Cannot access an internal element from module `X` in module `Y` (Typing[4444])
  File "module_enums.php--X.php", line 6, characters 6-6:
  This is from module `X`
File "module_enums.php--Y.php", line 8, characters 8-8:
Cannot access an internal element from module `X` in module `Y` (Typing[4444])
  File "module_enums.php--X.php", line 6, characters 6-6:
  This is from module `X`
File "module_enums.php--no-module.php", line 4, characters 13-13:
Cannot access an internal element from module `X` outside of a module (Typing[4444])
  File "module_enums.php--X.php", line 6, characters 6-6:
  This is from module `X`
File "module_enums.php--no-module.php", line 7, characters 8-8:
Cannot access an internal element from module `X` outside of a module (Typing[4444])
  File "module_enums.php--X.php", line 6, characters 6-6:
  This is from module `X`
